Генерация основных картинок

--- a/index.html
+++ b/index.html
@@ -157,5 +157,8 @@
   </a>
 </template>
 
+
+<script src="js/pictures.js"></script>
+<script src="js/template_generator.js"></script>
 </body>
 </html>
