--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
   </li>
 </template>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/pictures.js"></script>
 <script src="js/template_generator.js"></script>
+<script src = "js/close_open.js"></script>
 </body>
 </html>
